<resources>
	<string name="app_name">RickAndMorty</string>
	<string name="retry">Retry</string>
	<string name="characters">Characters</string>
	<string name="episodes">Episodes</string>
	<string name="locations">Locations</string>
	<string name="photo_of_character_content_description">Photo of character</string>
</resources>