<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/margin_normal"
	app:cardCornerRadius="@dimen/round_corner"
	app:cardElevation="@dimen/bigger_elevation">
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_normal"
		android:padding="@dimen/margin_normal">
		
		<TextView
			android:id="@+id/tvName"
			style="@style/normalText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="Date" />
		
		<TextView
			android:id="@+id/tvType"
			style="@style/normalText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvName"
			tools:layout_editor_absoluteX="100dp"
			tools:text="Date" />
		
		<TextView
			android:id="@+id/tvDimension"
			style="@style/normalText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvType"
			tools:layout_editor_absoluteX="100dp"
			tools:text="Date" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>