<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/lt_morty"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:lottie_autoPlay="true"
		app:lottie_loop="true"
		app:lottie_rawRes="@raw/morty_loading" />
	
	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/lt_no_internet"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:lottie_autoPlay="true"
		app:lottie_loop="true"
		app:lottie_rawRes="@raw/no_internet" />
	
	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/lt_generic_error"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:lottie_autoPlay="true"
		app:lottie_loop="true"
		app:lottie_rawRes="@raw/generic_error" />
</androidx.constraintlayout.widget.ConstraintLayout>