<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/swipeLocations"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/locationsList"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:listitem="@layout/location_item_list" />
		
		<com.nunop.rickandmorty.utils.layouts.CustomError
			android:id="@+id/customError"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>